<resources>
    <string name="app_name">EmailSample</string>

    <string name="add_account">添加账号</string>
    <string name="Select_the_type_of_mailbox">请选择一种邮箱类型</string>
    <string name="mailbox_QQ">QQ邮箱</string>
    <string name="mailbox_163">163邮箱</string>
    <string name="mailbox_126">126邮箱</string>
    <string name="Exchange">Exchange</string>
    <string name="Gmail">Gmail</string>
    <string name="Outlook">Outlook</string>
    <string name="other_mailbox">其他邮箱</string>

    <string name="carry_out">完成</string>
    <string name="address">邮箱</string>
    <string name="password">密码</string>
    <string name="EnterPassword_separatePassword_Or_authorizationCode">
        <font size="15">输入密码、独立密码或授权码</font></string>
    <string name="protocol">协议</string>
    <string name="logging_in">登录中…</string>


    <string name="email_qq">email@qq.com</string>
    <string name="email_163">email@163.com</string>
    <string name="email_126">email@126.com</string>

    <string name="POP3_recommend">POP3(推荐)</string>
    <string name="IMAP">IMAP</string>

    <string name="POP">POP</string>
    <string name="POP3">POP3</string>
    <string name="IMAP_recommend">IMAP(推荐)</string>

    <string name="IMAP_POP3">IMAP/POP3服务未开通，或用户名密码错误</string>
    <string name="Modify_information">修改信息</string>
    <string name="get_authorization_code">获取授权码</string>
    <string name="see_help">查看帮助</string>

    <string name="loading">正在加载</string>
    <string name="Loaded_all">已载入全部</string>

    <string name="keyboard_arrow_left_black">keyboard_arrow_left_black</string>
    <string name="input_clear">input_clear</string>
    <string name="show_or_hide_password">显示或隐藏密码</string>
    <string name="arrow_drop_down">arrow_drop_down</string>
    <string name="check">check</string>

    <string name="from">来自:</string>
    <string name="to">发至</string>
    <string name="open">打开</string>
    <string name="download">下载</string>
    <string name="reply">回复</string>
    <string name="reply_all">全部回复</string>
    <string name="Forwarding">转发</string>
    <string name="more">更多</string>

    <string name="inbox">收件箱</string>
    <string name="unread">未读箱</string>
    <string name="important_contacts">重要联系人</string>
    <string name="attachment">附件</string>
    <string name="todo">待办邮件</string>
    <string name="draft">草稿箱</string>
    <string name="sent">已发送</string>
    <string name="recycler">已删除邮件</string>
    <string name="star">星标邮件</string>
    <string name="folder">文件夹</string>
    <string name="setting">设置</string>

    <string name="new_email">新邮件</string>
    <string name="recipient">收件人</string>
    <string name="CC_BCC">抄送/密送</string>
    <string name="CC">抄送人</string>
    <string name="BCC">密送人</string>
    <string name="subject">主题</string>

    <string name="select_attachment">选择附件</string>
    <string name="gallery">图库</string>
    <string name="file_management">文件管理</string>

    <string name="cancel">取消</string>
    <string name="select_email">选择邮件</string>
    <string name="select_all">全选</string>

    <string name="mark">标记</string>
    <string name="move">移动</string>
    <string name="delete">删除</string>

    <string name="restore">恢复</string>
    <string name="remove_completely">彻底删除</string>

    <string name="isSave">将邮件保存到草稿箱?</string>
    <string name="give_up">放弃</string>
    <string name="save">保存</string>

    <string name="account">账号</string>
    <string name="default_account">默认账号</string>

</resources>
