<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimary">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="20dp"
        android:text="@string/select_attachment"
        android:gravity="center"
        android:textSize="15sp"/>

    <TextView
        android:id="@+id/gallery"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/gallery"
        android:textSize="16sp"
        android:textColor="@color/colorAccent"
        android:gravity="center"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#E4E4E4"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"/>

    <TextView
        android:id="@+id/file_management"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/file_management"
        android:textSize="16sp"
        android:textColor="@color/colorAccent"
        android:gravity="center"/>

</LinearLayout>