<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimary">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/mz_titlebar_ic_back_dark"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:contentDescription="@string/keyboard_arrow_left_black" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:gravity="center_vertical"
            android:text="@string/add_account"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_complete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/carry_out"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:paddingRight="20dp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#E4E4E4"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:divider="@drawable/divider_line"
        android:showDividers="middle|end"
        android:dividerPadding="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/address"
                android:textSize="16sp"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp" />

            <EditText
                android:id="@+id/et_email_address"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:inputType="textEmailAddress"
                android:textColor="@color/black"
                android:background="@null"
                tools:ignore="LabelFor" />

            <ImageView
                android:id="@+id/iv_clear_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/mc_header_icon_input_clear"
                android:contentDescription="@string/input_clear"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textSize="16sp"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp" />

            <EditText
                android:id="@+id/et_email_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:background="@null"
                android:hint="@string/EnterPassword_separatePassword_Or_authorizationCode" />

            <ImageView
                android:id="@+id/iv_show_or_hide_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_visibility_off_black_24dp"
                android:contentDescription="@string/show_or_hide_password"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/protocol_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/protocol"
                android:textSize="16sp"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp" />

            <TextView
                android:id="@+id/tv_protocol_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/IMAP"
                android:textColor="@color/black"
                android:textSize="16sp"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_arrow_drop_down_black_24dp"
                android:contentDescription="@string/arrow_drop_down"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>