<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/protocol"
        android:textSize="16sp"
        android:gravity="center_vertical"
        android:paddingStart="20dp"
        android:paddingLeft="20dp"
        android:paddingEnd="20dp"/>

    <TextView
        android:id="@+id/POP3_protocol"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/POP3"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:gravity="center_vertical"
        android:paddingStart="20dp"
        android:paddingLeft="20dp"
        android:paddingEnd="20dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#E4E4E4"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginEnd="20dp"/>

    <TextView
        android:id="@+id/IMAP_protocol"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/IMAP"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:gravity="center_vertical"
        android:paddingStart="20dp"
        android:paddingLeft="20dp"
        android:paddingEnd="20dp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#E4E4E4"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginEnd="20dp"/>

    <TextView
        android:id="@+id/Exchange_protocol"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/Exchange"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:gravity="center_vertical"
        android:paddingStart="20dp"
        android:paddingLeft="20dp"
        android:paddingEnd="20dp" />

</LinearLayout>