<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="300dp"
        android:layout_height="30dp"
        android:layout_marginTop="20dp"
        android:text="@string/isSave"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:gravity="center"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:layout_marginBottom="10dp">

        <TextView
            android:id="@+id/give_up_dialog"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/give_up"
            android:textSize="15sp"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            android:gravity="center"/>

        <TextView
            android:id="@+id/save_dialog"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/save"
            android:textSize="15sp"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            android:gravity="center"/>

    </LinearLayout>

</LinearLayout>