<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/IMAP_POP3"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:paddingTop="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/modify_information_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/Modify_information"
            android:textSize="17sp"
            android:textColor="@color/colorAccent"
            android:padding="20dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp" />

        <TextView
            android:id="@+id/see_help_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/see_help"
            android:textSize="17sp"
            android:textColor="@color/colorAccent"
            android:padding="20dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp" />

    </LinearLayout>

</LinearLayout>