<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/action_bar_main"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/open_drawerLayout"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/mz_ic_ab_back_indicator_pressed"
                android:layout_gravity="center"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/title_main"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/inbox"
                android:textStyle="bold"
                android:gravity="center_vertical" />

            <ImageView
                android:id="@+id/iv_search"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/ic_search_black_24dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                tools:ignore="ContentDescription" />

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/long_click_bar"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@color/colorPrimary"
            android:visibility="gone">

            <TextView
                android:id="@+id/cancel_main"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_centerVertical="true"
                android:text="@string/cancel"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/select_email_main"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/select_email"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/select_all_main"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="20dp"
                android:layout_marginEnd="20dp"
                android:text="@string/select_all"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"
                tools:ignore="RelativeOverlap" />

        </RelativeLayout>

        <View
            android:id="@+id/view_main"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#E4E4E4"
            android:layout_below="@+id/action_bar_main"/>

        <android.support.v4.widget.SwipeRefreshLayout
            android:id="@+id/swipe_refresh"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/view_main"
            android:layout_above="@id/long_click_bottom">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler_main"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            </android.support.v7.widget.RecyclerView>

        </android.support.v4.widget.SwipeRefreshLayout>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/float_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:src="@drawable/mz_tab_ic_edit_light"/>

        <LinearLayout
            android:id="@+id/long_click_bottom"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_alignParentBottom="true"
            android:background="@drawable/background_bottom"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:visibility="gone">

            <TextView
                android:id="@+id/mark_main"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/mark"
                android:textSize="12sp"
                android:drawableTop="@drawable/layout_mark"
                android:gravity="center"
                android:layout_gravity="center_vertical"/>

            <TextView
                android:id="@+id/move_main"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/move"
                android:textSize="12sp"
                android:drawableTop="@drawable/layout_move"
                android:gravity="center"
                android:layout_gravity="center_vertical"/>

            <TextView
                android:id="@+id/delete_main"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/delete"
                android:textSize="12sp"
                android:drawableTop="@drawable/layout_delete"
                android:gravity="center"
                android:layout_gravity="center_vertical"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/deleted_bottom"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_alignParentBottom="true"
            android:background="@drawable/background_bottom"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:visibility="gone">

            <TextView
                android:id="@+id/restore_deleted"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/restore"
                android:textSize="12sp"
                android:drawableTop="@drawable/layout_restore"
                android:gravity="center"
                android:layout_gravity="center_vertical"
                android:textColorLink="@drawable/text_color"/>

            <TextView
                android:id="@+id/remove_completely_deleted"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/remove_completely"
                android:textSize="12sp"
                android:drawableTop="@drawable/layout_delete"
                android:gravity="center"
                android:layout_gravity="center_vertical"
                android:textColorLink="@drawable/text_color"/>

        </LinearLayout>

        <ProgressBar
            android:id="@+id/progressBar_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="gone"/>

    </RelativeLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/colorPrimary">

        <include layout="@layout/view_sidebar"/>

    </FrameLayout>

</android.support.v4.widget.DrawerLayout>