<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F5F5">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation="horizontal"
        android:background="@color/colorPrimary"
        tools:ignore="UselessParent">

        <ImageView
            android:id="@+id/back_setting"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/mz_titlebar_ic_back_dark"
            android:layout_gravity="center"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/setting"
            android:textSize="16sp"
            android:textStyle="bold"
            android:gravity="center_vertical"
            android:singleLine="true"
            android:layout_marginEnd="40dp"
            android:layout_marginRight="40dp" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/account"
        android:gravity="center_vertical"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"/>

    <RelativeLayout
        android:id="@+id/default_setting"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:background="@color/colorPrimary">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerVertical="true">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/default_account"
                android:textColor="@color/black"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/default_account_setting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="a1721397309@outlook.com"/>

        </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_grey_expand"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            tools:ignore="ContentDescription" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#E4E4E4"
            android:layout_alignParentBottom="true"/>

    </RelativeLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_setting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary">
    </android.support.v7.widget.RecyclerView>

    <TextView
        android:id="@+id/add_setting"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:text="@string/add_account"
        android:textColor="@color/black"
        android:textSize="17sp"
        android:gravity="center_vertical"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:background="@color/colorPrimary"/>

</LinearLayout>